tauri/src/snapshots/updraft_tauri_lib__flight_recording__tests__migration_2_keeps_the_samples_and_uses_their_utc_as_the_system_utc.snap
---
source: tauri/src/flight_recording.rs
expression: rows(&path)
---
[
    [
        Integer(
            2000,
        ),
        Real(
            46.0,
        ),
        Real(
            2.0,
        ),
        Null,
        Null,
        Null,
        Null,
        Null,
        Null,
        Null,
        Integer(
            2000,
        ),
    ],
    [
        Integer(
            1000,
        ),
        Real(
            50.0,
        ),
        Real(
            20.0,
        ),
        Real(
            1200.0,
        ),
        Real(
            1.5,
        ),
        Real(
            2.0,
        ),
        Real(
            1.0,
        ),
        Real(
            100.0,
        ),
        Real(
            -3.0,
        ),
        Real(
            4.0,
        ),
        Integer(
            1000,
        ),
    ],
]
